sources cleanup